# Agente-IA---Whatsapp-

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  test_audio_webhook.py  test_gemini_connection.py
app/: config.py  logging_config.py  main.py
app/api/: dependencies.py
app/api/v1/: admin.py  health.py  webhooks.py
app/core/: agent.py  cache.py  conversation.py  exceptions.py  interfaces.py
app/models/: message.py  response.py  webhook.py
app/services/ai/: google_gemini.py
app/services/cache/: redis_cache.py
app/services/vector_store/: qdrant_store.py
app/services/webhook/: webhook_store.py
app/services/whatsapp/: evolution_api.py  waha_api.py
app/tenant/: loader.py  models.py  prompt_builder.py  validator.py
docker/app/: Dockerfile
docs/: 01-instalacao-local.md  02-configuracao-waha.md  03-configuracao-agente.md  04-deploy-vps.md  05-deploy-aws-ec2.md  06-troubleshooting.md  07-multimodal-support.md  api-reference.md  architecture.md  deploy-aws-ec2.md  deployment.md  guia-de-ativacao.md  guia-evolution-whatsapp.md  tenant-config-guide.md  webhook-schema.md
docs/decisions/: ADR-001-qdrant-for-history.md  ADR-002-semantic-cache.md  ADR-003-evolution-api.md  ADR-004-docker-deployment.md
tenants/: phone_routing.yaml
tenants/default/: settings.yaml
tenants/mab-energia-solar/: settings.yaml
tests/integration/: test_api.py
tests/unit/core/: test_agent.py  test_tenant.py
tests/unit/services/: conftest.py  test_services.py
